# app/Http/Controllers/Api/V1/OrganizationController.php
@@ -6,8 +6,10 @@ use App\Http\Controllers\Controller;
 use App\Models\Organization;
 use Illuminate\Http\Request;
 use App\Http\Requests\StoreOrganizationRequest;
+use App\Http\Requests\UpdateOrganizationRequest;
 use Symfony\Component\HttpFoundation\Response;
 use App\Http\Resources\OrganizationResource;
+use App\Http\Resources\OrganizationCollection;
 use App\Models\User;
 
 /**
@@ -48,7 +50,7 @@ class OrganizationController extends Controller
      */
     public function index()
     {
-        return Organization::all();
+        return new OrganizationCollection(Organization::all());
     }
 
     /**
@@ -90,33 +92,124 @@ class OrganizationController extends Controller
     public function store(StoreOrganizationRequest $request)
     {
 
+        //validate is user don't have organization
+        if ($request->user()->organization()->exists()) {
+            return response(['message' => 'User already has an organization'], Response::HTTP_UNPROCESSABLE_ENTITY);
+        }
+
+        //validate email is unique
+        if (Organization::where('email', $request->email)->exists()) {
+            return response(['message' => 'Email already exists'], Response::HTTP_UNPROCESSABLE_ENTITY);
+        }
+
+        //validate phone is unique
+        if (Organization::where('phone', $request->phone)->exists()) {
+            return response(['message' => 'Phone already exists'], Response::HTTP_UNPROCESSABLE_ENTITY);
+        }
+
 
         $organization = $request->user()->organization()->create($request->validated());
 
         return response(new OrganizationResource($organization), Response::HTTP_CREATED);
     }
 
-    /**
-     * Display the specified resource.
-     */
+
     public function show(Organization $organization)
     {
-        //
+        return new OrganizationResource($organization);
     }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Put(
+     *     path="/api/organizations/{organization}",
+     *     summary="Update an organization",
+     *     tags={"Organizations"},
+     *     @OA\Parameter(
+     *         name="organization",
+     *         in="path",
+     *         required=true,
+     *         description="Organization ID",
+     *         @OA\Schema(
+     *             type="string",
+     *             format="uuid"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"name", "address"},
+     *             @OA\Property(property="name", type="string", example="Acme Corp"),
+     *             @OA\Property(property="address", type="string", example="123 Main St"),
+     *             @OA\Property(property="city", type="string", example="Anytown"),
+     *             @OA\Property(property="state", type="string", example="CA"),
+     *             @OA\Property(property="country", type="string", example="USA"),
+     *             @OA\Property(property="postal_code", type="string", example="12345"),
+     *             @OA\Property(property="website", type="string", example="https://acme.com"),
+     *             @OA\Property(property="logo", type="string", example="https://acme.com/logo.png"),
+     *             @OA\Property(property="description", type="string", example="A description of the organization"),
+     *             @OA\Property(property="is_active", type="boolean", example=true)
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=202,
+     *         description="Organization updated successfully",
+     *         @OA\JsonContent(ref="#/components/schemas/Organization")
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Validation error",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Validation error")
+     *         )
+     *     )
+     * )
+
      */
-    public function update(Request $request, Organization $organization)
+    public function update(UpdateOrganizationRequest $request, Organization $organization)
     {
-        //
+
+
+        //validate email is unique but can be the same as the current organization
+        if (Organization::where('email', $request->email)->where('id', '!=', $organization->id)->exists()) {
+            return response(['message' => 'Email already exists'], Response::HTTP_UNPROCESSABLE_ENTITY);
+        }
+
+
+        //validate phone is unique but can be the same as the current organization
+        if (Organization::where('phone', $request->phone)->where('id', '!=', $organization->id)->exists()) {
+            return response(['message' => 'Phone already exists'], Response::HTTP_UNPROCESSABLE_ENTITY);
+        }
+        $organization->update($request->all());
+
+        return response(new OrganizationResource($organization), Response::HTTP_ACCEPTED);
     }
 
     /**
-     * Remove the specified resource from storage.
+     * @OA\Delete(
+     *    path="/api/organizations/{organization}",
+     *   summary="Delete an organization",
+     *  tags={"Organizations"},
+     * @OA\Parameter(
+     *    name="organization",
+     *  in="path",
+     * required=true,
+     * description="Organization ID",
+     * @OA\Schema(
+     *   type="string",
+     * format="uuid"
+     * )
+     * ),
+     * @OA\Response(
+     *   response=204,
+     * description="Organization deleted successfully"
+     * )
+     * )
+     * 
      */
     public function destroy(Organization $organization)
     {
-        //
+        $organization->delete();
+
+        return response(null, Response::HTTP_NO_CONTENT);
     }
 }
